--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,14 @@ requires = [
     "mlx",
     "numpy",
     "setuptools",
-    "torch",
-    "torchaudio",
+    "soundfile",
     "vocos-mlx"
 ]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "f5-tts-mlx"
-version = "0.0.2"
+version = "0.0.3"
 authors = [{name = "Lucas Newman", email = "lucasnewman@me.com"}]
 license = {text = "MIT"}
 description = "F5-TTS - MLX"
